--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("./assets/Montserrat-Bold.woff2") format("woff2");
+}
+
 .container {
   display: flex;
   justify-content: center;
